--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=320; user-scalable=no" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Rock Paper Scissors</title>
-	  <link rel="stylesheet" href="master.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	  <script type="text/javascript" charset="utf-8" src="phonegap.0.9.6.js"></script>
+	  <link rel="stylesheet" href="master.css" type="text/css" media="screen" title="no title" />
+	  <script type="text/javascript" charset="utf-8" src="phonegap-1.0.0rc1-SNAPSHOT.js"></script>
 	  <script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>	  
 	  <script type="text/javascript" charset="utf-8" src="main.js"></script>
   </head>
